feat: bookmarks api v1
